--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "myapp1",
+  "name": "chart",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.17.0",
+    "npm":"6.14.4"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "chart.js": "^2.9.3",
     "react": "^16.13.1",
-    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "npm start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -33,18 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/prasannanivas/Chartly.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/prasannanivas/Chartly/issues"
-  },
-  "homepage": "https://github.com/prasannanivas/Chartly#readme"
+  }
 }
